kubernetes/deployment.yml
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "order"
    labels: 
      app: "order"
  spec: 
    selector: 
      matchLabels: 
        app: "order"
    replicas: 3
    template: 
      metadata: 
        labels: 
          app: "order"
      spec: 
        containers: 
          - 
            name: "order"
            image: "jinyoung/order:v1"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "order"
    labels: 
      app: "order"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "order"
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "exchange"
    labels: 
      app: "exchange"
  spec: 
    selector: 
      matchLabels: 
        app: "exchange"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "exchange"
      spec: 
        containers: 
          - 
            name: "exchange"
            image: "jinyoung/exchange:v1"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "exchange"
    labels: 
      app: "exchange"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "exchange"
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "point"
    labels: 
      app: "point"
  spec: 
    selector: 
      matchLabels: 
        app: "point"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "point"
      spec: 
        containers: 
          - 
            name: "point"
            image: "jinyoung/point:v1"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "point"
    labels: 
      app: "point"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "point"
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "deadline"
    labels: 
      app: "deadline"
  spec: 
    selector: 
      matchLabels: 
        app: "deadline"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "deadline"
      spec: 
        containers: 
          - 
            name: "deadline"
            image: "jinyoung/deadline:v1"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "deadline"
    labels: 
      app: "deadline"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "deadline"
---
  apiVersion: "networking.k8s.io/v1"
  kind: "Ingress"
  metadata: 
    name: "gateway"
    annotations: 
      kubernetes.io/ingress.class: "nginx"
  spec: 
    rules: 
      - 
        host: ""
        http: 
          paths: 
            - 
              path: "/orders"
              pathType: "Prefix"
              backend: 
                service: 
                  name: "order"
                  port: 
                    number: 8080
            - 
              path: "/exchanges"
              pathType: "Prefix"
              backend: 
                service: 
                  name: "exchange"
                  port: 
                    number: 8080
            - 
              path: "/points"
              pathType: "Prefix"
              backend: 
                service: 
                  name: "point"
                  port: 
                    number: 8080
            - 
              path: "/deadlines"
              pathType: "Prefix"
              backend: 
                service: 
                  name: "deadline"
                  port: 
                    number: 8080
